Refactor code structure for improved readability and maintainability

--- a/correlation_notebooks.ipynb
+++ b/correlation_notebooks.ipynb
@@ -2968,6 +2968,12 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "969addee",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "325ff0f8",
@@ -3055,7 +3061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "11645c20",
    "metadata": {},
    "outputs": [],
@@ -3065,13 +3071,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "357b4726",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Cluster ID', 'Cluster Size', 'Cluster Type', 'Cluster Tissues', 'AC',\n",
+       "       'MF', 'PCG', 'Dominant Tissue'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rosmap_details.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "b4578e32",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# python function to plot hys"
+    "# rosmap_details include Cluster ID - the name of the cluster, Cluster Size - n genes in cluster, Cluster Type - CT or TS, AC, MF, PCG.\n",
+    "# Generate python function for hystograms of the content of each CT cluster (amount of AC, PCG and MF)\n",
+    "def plot_ct_cluster_histograms(rosmap_details: pd.DataFrame):\n",
+    "    import matplotlib.pyplot as plt\n",
+    "    import os\n",
+    "\n",
+    "    # Filter for CT clusters\n",
+    "    ct_clusters = rosmap_details[rosmap_details['Cluster Type'] == 'CT']\n",
+    "    output_path = \"ct_cluster_histograms\"\n",
+    "\n",
+    "    if not os.path.exists(output_path):\n",
+    "        os.makedirs(output_path)\n",
+    "\n",
+    "    # Plot histograms for each CT cluster\n",
+    "    for cluster_id, group in ct_clusters.groupby('Cluster ID'):\n",
+    "        plt.figure(figsize=(10, 6))\n",
+    "        plt.bar(['AC', 'PCG', 'MF'], [group['AC'].sum(), group['PCG'].sum(), group['MF'].sum()])\n",
+    "        plt.title(f'Content of CT Cluster: {cluster_id}')\n",
+    "        plt.xlabel('Gene Type')\n",
+    "        plt.ylabel('Gene Count')\n",
+    "        plt.xticks(rotation=45)\n",
+    "        plt.tight_layout()\n",
+    "        plt.savefig(os.path.join(output_path, f'ct_cluster_{cluster_id}_histogram.png'))\n",
+    "        plt.close()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "17d54313",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_ct_cluster_histograms(rosmap_details)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f99cc53",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
