Refactor code structure for improved readability and maintainability

--- a/correlation_notebooks.ipynb
+++ b/correlation_notebooks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "43e5483b",
    "metadata": {},
    "outputs": [],
@@ -873,15 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "41e906e5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "38a4b7f9",
    "metadata": {},
    "outputs": [
@@ -3002,7 +2994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "55480802",
    "metadata": {},
    "outputs": [
@@ -3010,40 +3002,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wrote: corr_beta_MULTI_REPORT_1000_bins.html\n"
+      "Wrote: corr_beta_ROSMAP_REPORT_1000_bins.html\n"
      ]
     }
    ],
    "source": [
     "\n",
     "datasets_tissues = {\n",
-    "    \"YoungGTEx\": [\"Adipose\", \"Muscle\", \"Brain\"],\n",
-    "    \"OldGTEx\": [\"Adipose\", \"Muscle\", \"Brain\"],\n",
-    "    \"ROSMAP\": [\"AC\", \"MF_BA9_BA46\", \"PCG_BA23\"],\n",
+    "    \"ROSMAP_AD\": [\"AC\", \"MF_BA9_BA46\", \"PCG_BA23\"],\n",
+    "    \"ROSMAP_MCI\": [\"AC\", \"MF_BA9_BA46\", \"PCG_BA23\"],\n",
+    "    \"ROSMAP_Control\": [\"AC\", \"MF_BA9_BA46\", \"PCG_BA23\"],\n",
     "}\n",
     "\n",
-    "# אפשר או רשימות מיושרות לפי סדר הרקמות...\n",
     "datasets_files = {\n",
-    "    \"YoungGTEx\": [\n",
-    "         \"/Users/edeneldar/CoExpression_ReProduction/old_outputs/Adipose - Subcutaneous_young.csv\",\n",
-    "         \"/Users/edeneldar/CoExpression_ReProduction/old_outputs/Muscle - Skeletal_young.csv\",\n",
-    "         \"/Users/edeneldar/CoExpression_ReProduction/old_outputs/Brain - Cortex_young.csv\",\n",
-    "     ],\n",
-    "     \"OldGTEx\": {\n",
-    "         \"Adipose\": \"/Users/edeneldar/CoExpression_ReProduction/old_outputs/Adipose - Subcutaneous_old.csv\",\n",
-    "         \"Muscle\":  \"/Users/edeneldar/CoExpression_ReProduction/old_outputs/Muscle - Skeletal_old.csv\",\n",
-    "         \"Brain\":   \"/Users/edeneldar/CoExpression_ReProduction/old_outputs/Brain - Cortex_old.csv\",\n",
-    "     },\n",
-    "    \"ROSMAP\": {\n",
-    "        \"AC\": \"/Users/edeneldar/CoExpression_ReProduction/ROSMAP_fixed_AC.csv\",\n",
-    "        \"MF_BA9_BA46\":  \"/Users/edeneldar/CoExpression_ReProduction/ROSMAP_fixed_MF_BA9_BA46.csv\",\n",
-    "        \"PCG_BA23\":   \"/Users/edeneldar/CoExpression_ReProduction/ROSMAP_fixed_PCG_BA23.csv\",\n",
+    "    \"ROSMAP_AD\": {\n",
+    "        \"AC\": \"/media/psylab-6028/DATA/Eden/CoExpression_ReProduction/ROSMAP_fixed_AD_AC.csv\",\n",
+    "        \"MF_BA9_BA46\": \"/media/psylab-6028/DATA/Eden/CoExpression_ReProduction/ROSMAP_fixed_AD_MF_BA9_BA46.csv\",\n",
+    "        \"PCG_BA23\": \"/media/psylab-6028/DATA/Eden/CoExpression_ReProduction/ROSMAP_fixed_AD_PCG_BA23.csv\",\n",
+    "    },\n",
+    "    \"ROSMAP_MCI\": {\n",
+    "        \"AC\": \"/media/psylab-6028/DATA/Eden/CoExpression_ReProduction/ROSMAP_fixed_MCI_AC.csv\",\n",
+    "        \"MF_BA9_BA46\": \"/media/psylab-6028/DATA/Eden/CoExpression_ReProduction/ROSMAP_fixed_MCI_MF_BA9_BA46.csv\",\n",
+    "        \"PCG_BA23\": \"/media/psylab-6028/DATA/Eden/CoExpression_ReProduction/ROSMAP_fixed_MCI_PCG_BA23.csv\",\n",
+    "    },\n",
+    "    \"ROSMAP_Control\": {\n",
+    "        \"AC\": \"/media/psylab-6028/DATA/Eden/CoExpression_ReProduction/ROSMAP_fixed_Control_AC.csv\",\n",
+    "        \"MF_BA9_BA46\": \"/media/psylab-6028/DATA/Eden/CoExpression_ReProduction/ROSMAP_fixed_Control_MF_BA9_BA46.csv\",\n",
+    "        \"PCG_BA23\": \"/media/psylab-6028/DATA/Eden/CoExpression_ReProduction/ROSMAP_fixed_Control_PCG_BA23.csv\",\n",
+    "    },\n",
+    "    \"ROSMAP_Total\": {\n",
+    "        \"AC\": \"/media/psylab-6028/DATA/Eden/CoExpression_ReProduction/ROSMAP_fixed_AC.csv\",\n",
+    "        \"MF_BA9_BA46\":  \"/media/psylab-6028/DATA/Eden/CoExpression_ReProduction/ROSMAP_fixed_MF_BA9_BA46.csv\",\n",
+    "        \"PCG_BA23\":   \"/media/psylab-6028/DATA/Eden/CoExpression_ReProduction/ROSMAP_fixed_PCG_BA23.csv\",\n",
     "    }\n",
     "}\n",
     "\n",
     "report_path = build_multi_dataset_corr_report(\n",
     "    datasets_tissues, datasets_files,\n",
-    "    betas=list(range(1, 5)),\n",
+    "    betas=list(range(1, 15)),\n",
     "    sample_per_group=600_000,  \n",
     "    bins=1000,\n",
     "    density=True,\n",
@@ -3052,11 +3048,87 @@
     "    max_genes_per_tissue=500000,\n",
     "    cor_method=\"pearson\",\n",
     "    ct_mode=\"pairwise\",\n",
-    "    out_html_path=\"corr_beta_MULTI_REPORT_1000_bins.html\",\n",
+    "    out_html_path=\"corr_beta_ROSMAP_REPORT_1000_bins.html\",\n",
     "    height=420,\n",
     ")\n",
     "\n",
     "print(\"Wrote:\", report_path)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "358142cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Cluster ID', 'Cluster Size', 'Cluster Type', 'Cluster Tissues', 'AC',\n",
+       "       'MF', 'PCG', 'Dominant Tissue'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"/media/psylab-6028/DATA/Eden/CoExpression_ReProduction/xwgcna_rosmap_autobeta_run4_Cluster_details.tsv\", sep=\"\\t\")\n",
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "902956dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import plotly.express as px\n",
+    "\n",
+    "df[[\"AC\", \"MF\", \"PCG\"]] = df[[\"AC\", \"MF\", \"PCG\"]].fillna(0).astype(int)\n",
+    "\n",
+    "df = df[(df[[\"AC\", \"MF\", \"PCG\"]].sum(axis=1) > 0)]\n",
+    "\n",
+    "long = df.melt(id_vars=\"Cluster ID\", value_vars=[\"AC\", \"MF\", \"PCG\"], var_name=\"tissue\", value_name=\"n\")\n",
+    "\n",
+    "dom = (long.sort_values(\"n\").groupby(\"Cluster ID\").tail(1).sort_values([\"tissue\", \"n\"], ascending=[True, False]))\n",
+    "module_order = dom[\"Cluster ID\"].tolist()\n",
+    "\n",
+    "color_map = {\"AC\": \"blue\", \"MF\": \"green\", \"PCG\": \"red\"}\n",
+    "\n",
+    "fig = px.bar(\n",
+    "    long, x=\"Cluster ID\", y=\"n\", color=\"tissue\", \n",
+    "    category_orders={\"module\": module_order, \"tissue\": [\"AC\", \"MF\", \"PCG\"]},\n",
+    "    color_discrete_map=color_map,\n",
+    "    barmode = \"stack\",\n",
+    "    hover_data={\"n\": True}\n",
+    ")\n",
+    "\n",
+    "fig.update_traces(\n",
+    "    hovertemplate=\"Module: %{x}<br>Tissue: %{legendgroup}<br>Count: %{customdata[0]}<br>Percentage: %{y:.1f} %\"\n",
+    ")\n",
+    "\n",
+    "fig.update_layout(\n",
+    "    title=\"Tissue Distribution by Module\",\n",
+    "    xaxis_title=\"Module\",\n",
+    "    yaxis_title=\"Percentage within Module\",\n",
+    "    yaxis = dict(tickformat=\"%\"),\n",
+    "    legend_title=\"Tissue\",\n",
+    "    bargap=0.05,\n",
+    "    height=450, width=1200\n",
+    ")\n",
+    "\n",
+    "fig.update_xaxes(tickangle=-60)\n",
+    "# save the figure\n",
+    "\n",
+    "# fig.write_image(\"/media/psylab-6028/DATA/Eden/CoExpression_ReProduction/tissue_distribution_by_module.png\")\n",
+    "\n",
+    "# write html\n",
+    "\n",
+    "fig.write_html(\"/media/psylab-6028/DATA/Eden/CoExpression_ReProduction/tissue_distribution_by_module.html\")\n"
    ]
   },
   {
@@ -3276,7 +3348,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "new_base",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
