Refactor code structure for improved readability and maintainability

--- a/correlation_notebooks.ipynb
+++ b/correlation_notebooks.ipynb
@@ -4502,30 +4502,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "9c65db4e",
+   "execution_count": 7,
+   "id": "b617fc92",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Mime type rendering requires nbformat>=4.2.0 but it is not installed",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 18\u001b[0m\n\u001b[1;32m     16\u001b[0m fig_ts\u001b[38;5;241m.\u001b[39mupdate_traces(textposition\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124moutside\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     17\u001b[0m fig_ts\u001b[38;5;241m.\u001b[39mupdate_layout(yaxis_title\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmean k (TS)\u001b[39m\u001b[38;5;124m\"\u001b[39m, xaxis_title\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtissue\u001b[39m\u001b[38;5;124m\"\u001b[39m, bargap\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.15\u001b[39m, height\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m450\u001b[39m, width\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m900\u001b[39m)\n\u001b[0;32m---> 18\u001b[0m \u001b[43mfig_ts\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mshow\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     20\u001b[0m \u001b[38;5;66;03m# --- CT: heatmap of mean connectivity between tissues ---\u001b[39;00m\n\u001b[1;32m     21\u001b[0m \u001b[38;5;66;03m# Build matrix where Z[i,j] = mean_k_CT[(ti, tj)] (off-diagonal); diagonal left as NaN/0.\u001b[39;00m\n\u001b[1;32m     22\u001b[0m tissue_idx \u001b[38;5;241m=\u001b[39m {t: i \u001b[38;5;28;01mfor\u001b[39;00m i, t \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(tissues)}\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/plotly/basedatatypes.py:3420\u001b[0m, in \u001b[0;36mBaseFigure.show\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   3387\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m   3388\u001b[0m \u001b[38;5;124;03mShow a figure using either the default renderer(s) or the renderer(s)\u001b[39;00m\n\u001b[1;32m   3389\u001b[0m \u001b[38;5;124;03mspecified by the renderer argument\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   3416\u001b[0m \u001b[38;5;124;03mNone\u001b[39;00m\n\u001b[1;32m   3417\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m   3418\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mplotly\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mio\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpio\u001b[39;00m\n\u001b[0;32m-> 3420\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mpio\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mshow\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/plotly/io/_renderers.py:415\u001b[0m, in \u001b[0;36mshow\u001b[0;34m(fig, renderer, validate, **kwargs)\u001b[0m\n\u001b[1;32m    410\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    411\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMime type rendering requires ipython but it is not installed\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    412\u001b[0m     )\n\u001b[1;32m    414\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m nbformat \u001b[38;5;129;01mor\u001b[39;00m Version(nbformat\u001b[38;5;241m.\u001b[39m__version__) \u001b[38;5;241m<\u001b[39m Version(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m4.2.0\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n\u001b[0;32m--> 415\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    416\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMime type rendering requires nbformat>=4.2.0 but it is not installed\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    417\u001b[0m     )\n\u001b[1;32m    419\u001b[0m display_jupyter_version_warnings()\n\u001b[1;32m    421\u001b[0m ipython_display\u001b[38;5;241m.\u001b[39mdisplay(bundle, raw\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
-      "\u001b[0;31mValueError\u001b[0m: Mime type rendering requires nbformat>=4.2.0 but it is not installed"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: nbformat in /home/psylab-6028/.local/lib/python3.10/site-packages (5.10.4)\n",
+      "Requirement already satisfied: fastjsonschema>=2.15 in /home/psylab-6028/.local/lib/python3.10/site-packages (from nbformat) (2.21.2)\n",
+      "Requirement already satisfied: traitlets>=5.1 in /home/psylab-6028/.local/lib/python3.10/site-packages (from nbformat) (5.14.3)\n",
+      "Requirement already satisfied: jsonschema>=2.6 in /home/psylab-6028/.local/lib/python3.10/site-packages (from nbformat) (4.23.0)\n",
+      "Requirement already satisfied: jupyter-core!=5.0.*,>=4.12 in /home/psylab-6028/.local/lib/python3.10/site-packages (from nbformat) (5.7.2)\n",
+      "Requirement already satisfied: referencing>=0.28.4 in /home/psylab-6028/.local/lib/python3.10/site-packages (from jsonschema>=2.6->nbformat) (0.36.2)\n",
+      "Requirement already satisfied: rpds-py>=0.7.1 in /home/psylab-6028/.local/lib/python3.10/site-packages (from jsonschema>=2.6->nbformat) (0.24.0)\n",
+      "Requirement already satisfied: attrs>=22.2.0 in /home/psylab-6028/.local/lib/python3.10/site-packages (from jsonschema>=2.6->nbformat) (25.3.0)\n",
+      "Requirement already satisfied: jsonschema-specifications>=2023.03.6 in /home/psylab-6028/.local/lib/python3.10/site-packages (from jsonschema>=2.6->nbformat) (2024.10.1)\n",
+      "Requirement already satisfied: platformdirs>=2.5 in /home/psylab-6028/.local/lib/python3.10/site-packages (from jupyter-core!=5.0.*,>=4.12->nbformat) (4.3.6)\n",
+      "Requirement already satisfied: typing-extensions>=4.4.0 in /home/psylab-6028/.local/lib/python3.10/site-packages (from referencing>=0.28.4->jsonschema>=2.6->nbformat) (4.12.2)\n"
      ]
     }
    ],
+   "source": [
+    " !pip install -U nbformat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "9c65db4e",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import plotly.express as px\n",
     "import plotly.graph_objects as go\n",
-    "\n",
+    "import plotly.io as pio\n",
+    "pio.renderers.default = \"browser\"\n",
     "# --- TS: bar plot of mean connectivity per tissue ---\n",
     "ts_df = pd.DataFrame(\n",
     "    [{\"tissue\": t, \"mean_k\": float(mean_k_TS[t])} for t in tissues]\n",
@@ -4552,11 +4568,19 @@
     "np.fill_diagonal(Z, 0.0)\n",
     "\n",
     "zmax = np.nanmax(Z[np.isfinite(Z)]) if np.isfinite(Z).any() else 1.0\n",
+    "\n",
+    "# Build text labels matrix (format to 3 sig figs; blank for NaN)\n",
+    "text_labels = [[(f\"{Z[i,j]:.3g}\" if np.isfinite(Z[i,j]) else \"\") for j in range(Z.shape[1])]\n",
+    "               for i in range(Z.shape[0])]\n",
+    "\n",
     "fig_ct = go.Figure(\n",
     "    data=go.Heatmap(\n",
     "        z=Z, x=tissues, y=tissues,\n",
     "        colorscale=\"Viridis\", zmin=0.0, zmax=zmax,\n",
-    "        colorbar_title=\"mean k (rows in i → cols j)\"\n",
+    "        colorbar_title=\"mean k (rows in i → cols j)\",\n",
+    "        text=text_labels,                 # add labels\n",
+    "        texttemplate=\"%{text}\",           # render labels\n",
+    "        textfont={\"size\": 12, \"color\": \"white\"}  # adjust size/color as needed\n",
     "    )\n",
     ")\n",
     "fig_ct.update_layout(\n",
@@ -4569,8 +4593,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "20afd478",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig_ts.write_html(\"rosmap_ts_mean_k_barplot.html\", include_plotlyjs=\"cdn\", auto_play=False)\n",
+    "fig_ct.write_html(\"rosmap_ct_mean_k_heatmap.html\", include_plotlyjs=\"cdn\", auto_play=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "779e0c32",
    "metadata": {},
    "outputs": [],
    "source": []
