Implement code changes to enhance functionality and improve performance

--- a/rosmap.ipynb
+++ b/rosmap.ipynb
@@ -13130,7 +13130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "ff9eb802",
    "metadata": {},
    "outputs": [
@@ -13172,6 +13172,7 @@
     "    kegg_long_csv=KEGG_CSV,           # מכאן הוא שולף category/subcategory\n",
     "    legend_fontsize=8\n",
     ")\n",
+    "plt.savefig(\"kegg_signed_heatmap_global60_new12.png\", dpi=220, bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
