Refactor ROSMAP notebook: Update execution counts, add KEGG CSV path, and enhance data processing with Polars. Include detailed output structures for gene information and cluster tables.

--- a/correlation_notebooks.ipynb
+++ b/correlation_notebooks.ipynb
@@ -4402,7 +4402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "c732ff2f",
    "metadata": {},
    "outputs": [
@@ -4410,24 +4410,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_919357/2934649359.py:9: PerformanceWarning: Determining the column names of a LazyFrame requires resolving its schema, which is a potentially expensive operation. Use `LazyFrame.collect_schema().names()` to get the column names without this warning.\n",
+      "/var/folders/5g/7gzv8rg14tv7prkqk0v2f3280000gn/T/ipykernel_35804/2474387217.py:14: PerformanceWarning: Determining the column names of a LazyFrame requires resolving its schema, which is a potentially expensive operation. Use `LazyFrame.collect_schema().names()` to get the column names without this warning.\n",
       "  cols = pl.scan_csv(CSV_PATH).columns\n"
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Detected tissues: ['AC', 'MF', 'PCG']\n",
-      "[TS] AC: rows=17,306 mean_k=204.76\n",
-      "[TS] MF: rows=17,306 mean_k=81.3162\n",
-      "[TS] PCG: rows=17,306 mean_k=614.835\n",
-      "[CT] AC->MF: rows=17,306 mean_k=31.6597\n",
-      "[CT] AC->PCG: rows=17,306 mean_k=42.7842\n",
-      "[CT] MF->AC: rows=17,306 mean_k=31.6597\n",
-      "[CT] MF->PCG: rows=17,306 mean_k=3.38346\n",
-      "[CT] PCG->AC: rows=17,306 mean_k=42.7842\n",
-      "[CT] PCG->MF: rows=17,306 mean_k=3.38346\n"
+     "ename": "FileNotFoundError",
+     "evalue": "No such file or directory (os error 2): /media/psylab-6028/DATA/Eden/CoExpression_ReProduction/adj4rn.csv",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 14\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m# List all possible tissue names (edit as needed)\u001b[39;00m\n\u001b[1;32m      9\u001b[0m KNOWN_TISSUES \u001b[38;5;241m=\u001b[39m [\n\u001b[1;32m     10\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAC\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMF_BA9_BA46\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPCG_BA23\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     11\u001b[0m     \u001b[38;5;66;03m# Add more as needed\u001b[39;00m\n\u001b[1;32m     12\u001b[0m ]\n\u001b[0;32m---> 14\u001b[0m cols \u001b[38;5;241m=\u001b[39m \u001b[43mpl\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mscan_csv\u001b[49m\u001b[43m(\u001b[49m\u001b[43mCSV_PATH\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m ROW_ID_COL \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m     16\u001b[0m     first \u001b[38;5;241m=\u001b[39m cols[\u001b[38;5;241m0\u001b[39m]\n",
+      "File \u001b[0;32m/opt/anaconda3/envs/new_base/lib/python3.11/site-packages/polars/lazyframe/frame.py:454\u001b[0m, in \u001b[0;36mLazyFrame.columns\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    416\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    417\u001b[0m \u001b[38;5;124;03mGet the column names.\u001b[39;00m\n\u001b[1;32m    418\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    446\u001b[0m \u001b[38;5;124;03m['foo', 'bar']\u001b[39;00m\n\u001b[1;32m    447\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    448\u001b[0m issue_warning(\n\u001b[1;32m    449\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDetermining the column names of a LazyFrame requires resolving its schema,\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    450\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m which is a potentially expensive operation. Use `LazyFrame.collect_schema().names()`\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    451\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m to get the column names without this warning.\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m    452\u001b[0m     category\u001b[38;5;241m=\u001b[39mPerformanceWarning,\n\u001b[1;32m    453\u001b[0m )\n\u001b[0;32m--> 454\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcollect_schema\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mnames()\n",
+      "File \u001b[0;32m/opt/anaconda3/envs/new_base/lib/python3.11/site-packages/polars/lazyframe/frame.py:2146\u001b[0m, in \u001b[0;36mLazyFrame.collect_schema\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   2116\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcollect_schema\u001b[39m(\u001b[38;5;28mself\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Schema:\n\u001b[1;32m   2117\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m   2118\u001b[0m \u001b[38;5;124;03m    Resolve the schema of this LazyFrame.\u001b[39;00m\n\u001b[1;32m   2119\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   2144\u001b[0m \u001b[38;5;124;03m    3\u001b[39;00m\n\u001b[1;32m   2145\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m-> 2146\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m Schema(\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_ldf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcollect_schema\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m)\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: No such file or directory (os error 2): /media/psylab-6028/DATA/Eden/CoExpression_ReProduction/adj4rn.csv"
      ]
     }
    ],
@@ -4437,26 +4434,36 @@
     "from math import ceil\n",
     "\n",
     "CSV_PATH = \"/media/psylab-6028/DATA/Eden/CoExpression_ReProduction/adj4rn.csv\"\n",
-    "ROW_ID_COL = None  # set to the first column name if your CSV has row IDs, e.g. \"gene\" or similar\n",
+    "ROW_ID_COL = None\n",
     "\n",
-    "# 1) Inspect header to get columns and infer tissues by prefix before first \"_\"\n",
+    "# List all possible tissue names (edit as needed)\n",
+    "KNOWN_TISSUES = [\n",
+    "    \"AC\", \"MF_BA9_BA46\", \"PCG_BA23\"\n",
+    "    # Add more as needed\n",
+    "]\n",
+    "\n",
     "cols = pl.scan_csv(CSV_PATH).columns\n",
     "if ROW_ID_COL is None:\n",
-    "    # Heuristic: if the first column does not look like \"<Tissue>_<Gene>\", treat it as row-id\n",
     "    first = cols[0]\n",
     "    ROW_ID_COL = first if (first.count(\"_\") < 1) else None\n",
     "\n",
     "data_cols = cols if ROW_ID_COL is None else [c for c in cols if c != ROW_ID_COL]\n",
     "\n",
     "def tissue_of(col: str) -> str:\n",
-    "    return col.split(\"_\", 1)[0]\n",
+    "    # Match longest tissue name at start of col\n",
+    "    matches = [t for t in KNOWN_TISSUES if col.startswith(t + \"_\")]\n",
+    "    if matches:\n",
+    "        return max(matches, key=len)\n",
+    "    return col.split(\"_\", 1)[0]  # fallback\n",
     "\n",
     "by_tissue = defaultdict(list)\n",
     "for c in data_cols:\n",
-    "    by_tissue[tissue_of(c)].append(c)\n",
+    "    t = tissue_of(c)\n",
+    "    by_tissue[t].append(c)\n",
     "\n",
     "tissues = sorted(by_tissue.keys())\n",
     "print(f\"Detected tissues: {tissues}\")\n",
+    "\n",
     "\n",
     "# 2) Helpers: count rows per tissue and sum a row×col block in streaming fashion\n",
     "def count_rows_for_tissue(t: str) -> int:\n",
