Refactor correlation analysis in Jupyter notebook and update Fisher-z shrinker in R scripts
- Updated CSV_PATH in correlation_notebooks.ipynb to point to new data location.
- Added new code block in correlation_notebooks.ipynb for efficient tissue data processing using Polars.
- Implemented functions for tissue identification and correlation calculations in correlation_notebooks.ipynb.
- Enhanced Fisher-z shrinker functionality in ClusteringBuilding.R for cross-tissue correlations.
- Cleaned up code and removed unnecessary comments in ClusteringBuilding.R for better readability.

--- a/notebooks/correlation_notebooks.ipynb
+++ b/notebooks/correlation_notebooks.ipynb
@@ -8583,7 +8583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "c732ff2f",
    "metadata": {},
    "outputs": [
@@ -8633,7 +8633,7 @@
     "from collections import defaultdict\n",
     "from math import ceil\n",
     "\n",
-    "CSV_PATH = \"/media/psylab-6028/DATA/Eden/CoExpression_ReProduction/adj_drop__.csv\"\n",
+    "CSV_PATH = \"/Users/edeneldar/Library/CloudStorage/GoogleDrive-edenede2@gmail.com/My Drive/ROSMAP_Data/RNAseq_RISK_BrainRegions_STasaki/adj4rn.csv\"\n",
     "ROW_ID_COL = None\n",
     "\n",
     "# List all possible tissue names (edit as needed)\n",
@@ -8716,6 +8716,186 @@
     "        ct_sum = block_total_sum(ti, tj)\n",
     "        mean_k_CT[(ti, tj)] = ct_sum / max(1, n_rows[ti])\n",
     "        print(f\"[CT] {ti}->{tj}: rows={n_rows[ti]:,} mean_k={mean_k_CT[(ti,tj)]:.6g}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a68e3b43",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import polars as pl\n",
+    "from collections import defaultdict\n",
+    "from math import ceil\n",
+    "\n",
+    "# ------------------ CONFIG ------------------\n",
+    "CSV_PATH   = \"/Users/edeneldar/Library/CloudStorage/GoogleDrive-edenede2@gmail.com/My Drive/ROSMAP_Data/RNAseq_RISK_BrainRegions_STasaki/adj4rn.csv\"\n",
+    "ROW_ID_COL = None            # אם ידוע לך שם עמודת השורות (למשל \"id\"), כתוב אותו כאן\n",
+    "CHUNK_SIZE = 2048            # מספר עמודות שנסכום בכל מעבר (לאזן בין IO לזמן)\n",
+    "SAMPLE_N   = 5               # כמה מזהי שורות לדגום לכל רקמה\n",
+    "# --------------------------------------------\n",
+    "\n",
+    "# Lazy scan: נשתמש רק בפרויקציה על העמודות הנדרשות בכל שלב\n",
+    "lf0 = pl.scan_csv(CSV_PATH)\n",
+    "\n",
+    "# זיהוי עמודת מזהה-שורה: ברירת מחדל - העמודה הראשונה\n",
+    "all_cols = lf0.columns\n",
+    "if ROW_ID_COL is None:\n",
+    "    ROW_ID_COL = all_cols[0]\n",
+    "\n",
+    "# כל עמודות הנתונים (בלי עמודת ה-ID)\n",
+    "data_cols = [c for c in all_cols if c != ROW_ID_COL]\n",
+    "\n",
+    "# ---------- מפצלים שם עמודה לשיטה \"ישנה\" מול \"חדשה\" ----------\n",
+    "def tissue_old(col: str) -> str:\n",
+    "    # underscore ראשון (ההתנהגות הישנה ששיבשה רקמות עם \"_\")\n",
+    "    return col.split(\"_\", 1)[0]\n",
+    "\n",
+    "def tissue_new(col: str) -> str:\n",
+    "    # underscore אחרון (הרקמה היא כל מה שקודם לגֶן)\n",
+    "    i = col.rfind(\"_\")\n",
+    "    return col if i < 0 else col[:i]\n",
+    "\n",
+    "# בונים מפה: רקמה -> רשימת עמודות, לכל שיטה\n",
+    "def build_by_tissue(cols, labeler):\n",
+    "    d = defaultdict(list)\n",
+    "    for c in cols:\n",
+    "        d[labeler(c)].append(c)\n",
+    "    return d\n",
+    "\n",
+    "by_old = build_by_tissue(data_cols, tissue_old)\n",
+    "by_new = build_by_tissue(data_cols, tissue_new)\n",
+    "\n",
+    "tissues_old = sorted(by_old.keys())\n",
+    "tissues_new = sorted(by_new.keys())\n",
+    "\n",
+    "print(f\"[INFO] ROW_ID_COL = {ROW_ID_COL}\")\n",
+    "print(f\"[INFO] #columns (data): {len(data_cols):,}\")\n",
+    "print(f\"[INFO] Detected tissues (OLD): {tissues_old}\")\n",
+    "print(f\"[INFO] Detected tissues (NEW): {tissues_new}\")\n",
+    "\n",
+    "# כמה עמודות שינו שיוך רקמה בין ישן לחדש?\n",
+    "changed = sum(1 for c in data_cols if tissue_old(c) != tissue_new(c))\n",
+    "print(f\"[INFO] Columns with different tissue label (old vs new): {changed}/{len(data_cols)} ({changed/len(data_cols):.1%})\")\n",
+    "\n",
+    "# ---------- עזרי חישוב יעילים ----------\n",
+    "\n",
+    "def count_rows_for_tissue(prefix: str) -> int:\n",
+    "    \"\"\"סופר שורות ש-ID שלהן מתחיל ב'<prefix>_' \"\"\"\n",
+    "    lf = (pl.scan_csv(CSV_PATH)\n",
+    "            .select([ROW_ID_COL])\n",
+    "            .filter(pl.col(ROW_ID_COL).str.starts_with(prefix + \"_\"))\n",
+    "            .select(pl.len()))\n",
+    "    return int(lf.collect(streaming=True).item())\n",
+    "\n",
+    "def sample_row_ids(prefix: str, n: int = 5):\n",
+    "    \"\"\"דוגם מזהי שורות לרפרנס מהיר\"\"\"\n",
+    "    lf = (pl.scan_csv(CSV_PATH)\n",
+    "            .select([ROW_ID_COL])\n",
+    "            .filter(pl.col(ROW_ID_COL).str.starts_with(prefix + \"_\"))\n",
+    "            .head(n))\n",
+    "    try:\n",
+    "        return lf.collect(streaming=True)[ROW_ID_COL].to_list()\n",
+    "    except Exception:\n",
+    "        return []\n",
+    "\n",
+    "def block_total_sum(row_prefix: str, col_list: list[str]) -> float:\n",
+    "    \"\"\"מסכם את כל A[row_prefix, col_list] בסטרימינג ובצ'אנקים\"\"\"\n",
+    "    total = 0.0\n",
+    "    if not col_list:\n",
+    "        return total\n",
+    "    n_chunks = max(1, ceil(len(col_list) / CHUNK_SIZE))\n",
+    "    for k in range(n_chunks):\n",
+    "        chunk = col_list[k*CHUNK_SIZE : (k+1)*CHUNK_SIZE]\n",
+    "        lf = (\n",
+    "            pl.scan_csv(CSV_PATH)\n",
+    "              .select([ROW_ID_COL] + chunk)  # projection pushdown\n",
+    "              .filter(pl.col(ROW_ID_COL).str.starts_with(row_prefix + \"_\"))\n",
+    "              .select([pl.col(c).sum().alias(c) for c in chunk])\n",
+    "              .select(pl.sum_horizontal(pl.all()).alias(\"tot\"))\n",
+    "        )\n",
+    "        total += float(lf.collect(streaming=True)[\"tot\"][0])\n",
+    "    return total\n",
+    "\n",
+    "# עטיפות נוחות לשתי השיטות\n",
+    "def n_rows_map(tissues, mode=\"old\"):\n",
+    "    out = {}\n",
+    "    for t in tissues:\n",
+    "        out[t] = count_rows_for_tissue(t)\n",
+    "    return out\n",
+    "\n",
+    "def mean_k_TS_map(by_map, n_rows):\n",
+    "    out = {}\n",
+    "    for t, cols in by_map.items():\n",
+    "        s = block_total_sum(t, cols)\n",
+    "        out[t] = s / max(1, n_rows[t])\n",
+    "    return out\n",
+    "\n",
+    "def mean_k_CT_pairs(by_map, n_rows):\n",
+    "    out = {}\n",
+    "    tissues = sorted(by_map.keys())\n",
+    "    for ti in tissues:\n",
+    "        for tj in tissues:\n",
+    "            if ti == tj:\n",
+    "                continue\n",
+    "            s = block_total_sum(ti, by_map[tj])\n",
+    "            out[(ti, tj)] = s / max(1, n_rows[ti])\n",
+    "    return out\n",
+    "\n",
+    "# ---------- חישוב דו-מסלולי: OLD vs NEW ----------\n",
+    "\n",
+    "print(\"\\n[STEP] Counting rows per tissue (OLD labeling)…\")\n",
+    "n_rows_old = n_rows_map(tissues_old, mode=\"old\")\n",
+    "for t in tissues_old:\n",
+    "    print(f\"  OLD rows[{t}] = {n_rows_old[t]:,}  sample: {sample_row_ids(t, SAMPLE_N)}\")\n",
+    "\n",
+    "print(\"\\n[STEP] Counting rows per tissue (NEW labeling)…\")\n",
+    "n_rows_new = n_rows_map(tissues_new, mode=\"new\")\n",
+    "for t in tissues_new:\n",
+    "    print(f\"  NEW rows[{t}] = {n_rows_new[t]:,}  sample: {sample_row_ids(t, SAMPLE_N)}\")\n",
+    "\n",
+    "print(\"\\n[STEP] TS mean-k (OLD)…\")\n",
+    "TS_old = mean_k_TS_map(by_old, n_rows_old)\n",
+    "for t in tissues_old:\n",
+    "    print(f\"  [TS OLD] {t}: mean_k = {TS_old[t]:.6g}\")\n",
+    "\n",
+    "print(\"\\n[STEP] TS mean-k (NEW)…\")\n",
+    "TS_new = mean_k_TS_map(by_new, n_rows_new)\n",
+    "for t in tissues_new:\n",
+    "    print(f\"  [TS NEW] {t}: mean_k = {TS_new[t]:.6g}\")\n",
+    "\n",
+    "# מיפוי \"שם ישן\" ל\"שם חדש\" לצורך השוואה (טבעי: old_name = split_first(new_name))\n",
+    "def to_old_name(new_t: str) -> str:\n",
+    "    return new_t.split(\"_\", 1)[0]\n",
+    "\n",
+    "print(\"\\n[STEP] CT mean-k (OLD)…\")\n",
+    "CT_old = mean_k_CT_pairs(by_old, n_rows_old)\n",
+    "for (ti, tj), v in CT_old.items():\n",
+    "    print(f\"  [CT OLD] {ti}->{tj}: mean_k = {v:.6g}\")\n",
+    "\n",
+    "print(\"\\n[STEP] CT mean-k (NEW)…\")\n",
+    "CT_new = mean_k_CT_pairs(by_new, n_rows_new)\n",
+    "for (ti, tj), v in CT_new.items():\n",
+    "    print(f\"  [CT NEW] {ti}->{tj}: mean_k = {v:.6g}\")\n",
+    "\n",
+    "# ---------- דוח השוואה תמציתי ----------\n",
+    "print(\"\\n[REPORT] Δ/Ratio per tissue (TS):\")\n",
+    "for t_new in tissues_new:\n",
+    "    t_old = to_old_name(t_new)\n",
+    "    if t_old in TS_old:\n",
+    "        delta = TS_new[t_new] - TS_old[t_old]\n",
+    "        ratio = TS_new[t_new] / TS_old[t_old] if TS_old[t_old] != 0 else float(\"inf\")\n",
+    "        print(f\"  TS {t_new}: old={TS_old[t_old]:.6g} new={TS_new[t_new]:.6g}  Δ={delta:.6g}  x{ratio:.3f}\")\n",
+    "\n",
+    "print(\"\\n[REPORT] Δ/Ratio per pair (CT):\")\n",
+    "for (ti_new, tj_new), v_new in CT_new.items():\n",
+    "    ti_old = to_old_name(ti_new)\n",
+    "    tj_old = to_old_name(tj_new)\n",
+    "    v_old = CT_old.get((ti_old, tj_old), float(\"nan\"))\n",
+    "    delta = v_new - v_old if v_old == v_old else float(\"nan\")\n",
+    "    ratio = (v_new / v_old) if (v_old == v_old and v_old != 0) else float(\"inf\")\n",
+    "    print(f\"  CT {ti_new}->{tj_new}: old={v_old:.6g} new={v_new:.6g}  Δ={delta:.6g}  x{ratio:.3f}\")\n"
    ]
   },
   {
@@ -8825,7 +9005,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "new_base",
    "language": "python",
    "name": "python3"
   },
